.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Migration_Job__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__AuthName__c</fullName>
        <label>AuthName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dataplier__ETA__c</fullName>
        <description>Estimated date for end of migration</description>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dataplier__Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Org</label>
        <referenceTo>Dataplier__Organisation__c</referenceTo>
        <relationshipLabel>Migration Jobs</relationshipLabel>
        <relationshipName>Migration_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Sequence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Execution Sequence</label>
        <referenceTo>Dataplier__Execution_Sequence__c</referenceTo>
        <relationshipLabel>Migration Jobs</relationshipLabel>
        <relationshipName>Migration_Jobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Space_required__c</fullName>
        <label>Space required (KB)</label>
        <summarizedField>Dataplier__Migration_Step__c.Dataplier__Space_required__c</summarizedField>
        <summaryForeignKey>Dataplier__Migration_Step__c.Dataplier__Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dataplier__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dataplier__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Migration Job</label>
    <listViews>
        <fullName>Dataplier__All</fullName>
        <columns>NAME</columns>
        <columns>Dataplier__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MJ-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Migration Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Jobs</pluralLabel>
    <recordTypes>
        <fullName>Dataplier__Migration_Job</fullName>
        <active>true</active>
        <label>Migration_Job</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>